chinh sua code de co database default