@@ -1,12 +1,10 @@
 package ut.edu.project_skincarebooking.configs;
-
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.stereotype.Component;
 import ut.edu.project_skincarebooking.models.*;
 import ut.edu.project_skincarebooking.repositories.*;
 
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 @Component
 public class DatabaseSeeder implements CommandLineRunner {
@@ -24,9 +22,13 @@ public class DatabaseSeeder implements CommandLineRunner {
 
     @Override
     public void run(String... args) {
-        seedAdminAccount();
-        seedServices();
-        seedSkinTherapists();
+        try {
+            seedAdminAccount();
+            seedServices();
+            seedSkinTherapists();
+        } catch (Exception e) {
+            System.err.println("❌ Error seeding database: " + e.getMessage());
+        }
     }
 
     private void seedAdminAccount() {
@@ -39,10 +41,10 @@ public class DatabaseSeeder implements CommandLineRunner {
 
     private void seedServices() {
         if (serviceRepository.count() == 0) {
-            List<Service> services = List.of(
-                    new Service(null, "Facial Treatment", "Chăm sóc da mặt", 50.0),
-                    new Service(null, "Acne Removal", "Điều trị mụn", 60.0),
-                    new Service(null, "Anti-Aging", "Chống lão hóa", 80.0)
+            List<Service> services = Arrays.asList(
+                    new Service(null, "Facial Treatment", "Chăm sóc da mặt", 50.0,60),
+                    new Service(null, "Acne Removal", "Điều trị mụn", 60.0, 60),
+                    new Service(null, "Anti-Aging", "Chống lão hóa", 80.0, 60)
             );
             serviceRepository.saveAll(services);
             System.out.println("✅ Services inserted");
@@ -54,7 +56,10 @@ public class DatabaseSeeder implements CommandLineRunner {
             SkinTherapist therapist = SkinTherapist.builder()
                     .name("Dr. Tran")
                     .specialization("Acne Treatment")
-                    .workSchedule(Map.of("Monday", "09:00-17:00", "Wednesday", "10:00-18:00"))
+                    .email("dr.tran@gmail.com")
+                    .phone("090019954")
+                    .workSchedule(new HashMap<>(Map.of("Monday", "09:00-17:00", "Wednesday", "10:00-18:00")))
+                    .email("")
                     .build();
             skinTherapistRepository.save(therapist);
             System.out.println("✅ Skin Therapist created: " + therapist);
